Bug fixed: video background is not visible on mobile devices | add extra content at privacy page

--- a/binarbox/src/front/src/app/bridge/home/home.component.scss
+++ b/binarbox/src/front/src/app/bridge/home/home.component.scss
@@ -29,19 +29,7 @@
 
 /* Video mobile BG */
 .mobile-video-background {
-    position: fixed;
-    top: 0;
-    z-index: -1;
-
-    @media (orientation: landscape) and (min-aspect-ratio: 16/9) {
-        width: 100%;
-        height: auto;
-    }
-
-    @media (orientation: portrait) and (max-aspect-ratio: 16/9) {
-        width: auto;
-        height: 100%;
-        right: -123%;
-    }
+    width: 100%;
+    height: 100%;
 }
 /* End video mobile BG */
